refactor: Repository 命名统一与搜索查询重构
- 将 MybatisXxxRepository 统一重命名为 XxxRepositoryImpl（favorite/message/order/payment）
- OrderEntityMapper 重命名为 OrderDataMapper，删除 OrderCacheConstant
- ProductSearchHandler 重命名为 ProductSearchQueryService，ProductSearchCriteria 上提到 query 包
- 新增 SellerCachePort / SellerCacheAdapter 缓存资产方信息
- 调整跨模块适配器（admin/product/order/user）与 ProductReadModelAssembler
- 同步模块 AGENTS.md 与 doc/架构/架构-模块结构.md