@@ -6,25 +6,25 @@ import com.cartethyia.easyorange.product.application.query.readmodel.ProductRead
 import com.cartethyia.easyorange.product.application.query.readmodel.SellerReadModel;
 import com.cartethyia.easyorange.product.application.port.query.ProductQueryRepository;
 import com.cartethyia.easyorange.product.domain.aggregate.Product;
+import com.cartethyia.easyorange.product.domain.valueobject.CategoryId;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Component
 public class ProductReadModelAssembler {
 
-    /**
-     * 从聚合根富化装配 ProductVO（含卖家/图片/分类/详情 多维关联）。
-     */
-    public ProductVO toProductVO(Product product,
-                                  Map<String, List<ProductQueryRepository.ProductImageInfo>> imagesByProduct,
-                                  Map<String, ProductQueryRepository.CategoryInfo> categoryMap,
-                                  Map<String, ProductQueryRepository.ProductDetailInfo> detailMap,
-                                  Map<String, SellerReadModel> sellerMap) {
-        ProductVO.ProductVOBuilder builder = ProductVO.builder()
+    public record AssemblyContext(
+            Map<String, List<ProductQueryRepository.ProductImageInfo>> imagesByProduct,
+            Map<String, ProductQueryRepository.CategoryInfo> categoryMap,
+            Map<String, ProductQueryRepository.ProductDetailInfo> detailMap,
+            Map<String, SellerReadModel> sellerMap
+    ) {}
+
+    public ProductVO toProductVO(Product product, AssemblyContext ctx) {
+        var builder = ProductVO.builder()
                 .id(product.getId().value())
                 .sellerId(product.getSellerId().value())
                 .categoryId(product.getCategoryId() != null ? product.getCategoryId().value() : null)
@@ -40,131 +40,96 @@ public class ProductReadModelAssembler {
                 .contactMethod(product.getContactMethod() != null && product.getContactMethod().isNotBlank()
                         ? MaskUtils.maskPhone(product.getContactMethod().value()) : null)
                 .createTime(product.getCreateTime())
-                .updateTime(product.getUpdateTime());
+                .updateTime(product.getUpdateTime())
+                .statusDesc(product.getStatus().getDesc())
+                .conditionDesc(product.getConditionLevel() != null ? product.getConditionLevel().getDesc() : null);
 
-        SellerReadModel seller = sellerMap.get(product.getSellerId().value());
+        enrichSeller(builder, product.getSellerId().value(), ctx.sellerMap);
+        enrichDetail(builder, product, ctx.detailMap);
+        enrichCategory(builder, product.getCategoryId(), ctx.categoryMap);
+        enrichImages(builder, product, ctx.imagesByProduct);
+
+        return builder.build();
+    }
+
+    public ProductVO toProductVO(ProductReadModel readModel,
+                                  Map<String, List<ProductQueryRepository.ProductImageInfo>> imagesByProduct,
+                                  Map<String, SellerReadModel> sellerMap) {
+        var builder = applyReadModelFields(ProductVO.builder(), readModel);
+        enrichSeller(builder, readModel.sellerId(), sellerMap);
+        enrichImages(builder, readModel.id(), imagesByProduct);
+        return builder.build();
+    }
+
+    private static ProductVO.ProductVOBuilder applyReadModelFields(ProductVO.ProductVOBuilder builder, ProductReadModel m) {
+        return builder
+                .id(m.id()).sellerId(m.sellerId()).categoryId(m.categoryId())
+                .title(m.title()).description(m.description())
+                .price(m.price()).originalPrice(m.originalPrice()).stock(m.stock())
+                .status(m.status()).statusDesc(m.statusDesc()).views(m.views())
+                .condition(m.condition()).conditionDesc(m.conditionDesc())
+                .location(m.location()).contactMethod(m.contactMethod())
+                .images(m.images()).mainImageUrl(m.mainImageUrl())
+                .username(m.username()).userAvatar(m.userAvatar())
+                .categoryName(m.categoryName())
+                .createTime(m.createTime()).updateTime(m.updateTime());
+    }
+
+    private static void enrichSeller(ProductVO.ProductVOBuilder builder, String sellerId,
+                                      Map<String, SellerReadModel> sellerMap) {
+        var seller = sellerMap.get(sellerId);
         if (seller != null) {
             builder.username(seller.nickName() != null ? seller.nickName() : seller.username());
             builder.userAvatar(seller.avatar());
         }
+    }
 
-        ProductQueryRepository.ProductDetailInfo detail = detailMap.get(product.getId().value());
+    private static void enrichCategory(ProductVO.ProductVOBuilder builder, CategoryId categoryId,
+                                        Map<String, ProductQueryRepository.CategoryInfo> categoryMap) {
+        if (categoryId != null) {
+            var category = categoryMap.get(categoryId.value());
+            if (category != null) {
+                builder.categoryName(category.name());
+            }
+        }
+    }
+
+    private static void enrichDetail(ProductVO.ProductVOBuilder builder, Product product,
+                                      Map<String, ProductQueryRepository.ProductDetailInfo> detailMap) {
+        var detail = detailMap.get(product.getId().value());
         if (detail != null) {
             builder.description(detail.description());
         } else if (product.getDescription() != null && !product.getDescription().isBlank()) {
             builder.description(product.getDescription().value());
         }
+    }
 
-        builder.statusDesc(product.getStatus().getDesc());
-        if (product.getConditionLevel() != null) {
-            builder.conditionDesc(product.getConditionLevel().getDesc());
-        }
-
-        if (product.getCategoryId() != null) {
-            ProductQueryRepository.CategoryInfo category = categoryMap.get(product.getCategoryId().value());
-            if (category != null) {
-                builder.categoryName(category.name());
-            }
-        }
-
-        if (product.getImages() != null && !product.getImages().isEmpty()) {
-            List<String> imageUrls = product.getImages().imageUrls();
-            builder.images(imageUrls);
-            if (product.getImages().mainImage() != null) {
-                builder.mainImageUrl(product.getImages().mainImage().value());
-            } else if (!imageUrls.isEmpty()) {
-                builder.mainImageUrl(imageUrls.get(0));
-            }
+    private static void enrichImages(ProductVO.ProductVOBuilder builder, Product product,
+                                      Map<String, List<ProductQueryRepository.ProductImageInfo>> imagesByProduct) {
+        var images = product.getImages();
+        if (images != null && !images.isEmpty()) {
+            var urls = images.imageUrls();
+            builder.images(urls);
+            builder.mainImageUrl(images.mainImage() != null ? images.mainImage().value() : urls.getFirst());
         } else {
-            List<ProductQueryRepository.ProductImageInfo> images = imagesByProduct.getOrDefault(product.getId().value(), List.of());
-            if (!images.isEmpty()) {
-                List<String> imageUrls = images.stream()
-                        .map(ProductQueryRepository.ProductImageInfo::imageUrl)
-                        .collect(Collectors.toList());
-                builder.images(imageUrls);
-                images.stream()
-                        .filter(ProductQueryRepository.ProductImageInfo::isMain)
-                        .findFirst()
-                        .ifPresent(img -> builder.mainImageUrl(img.imageUrl()));
-            }
+            enrichImages(builder, product.getId().value(), imagesByProduct);
         }
-
-        return builder.build();
     }
 
-    public ProductVO toProductVO(ProductReadModel readModel) {
-        return ProductVO.builder()
-                .id(readModel.id())
-                .sellerId(readModel.sellerId())
-                .username(readModel.username())
-                .userAvatar(readModel.userAvatar())
-                .categoryId(readModel.categoryId())
-                .categoryName(readModel.categoryName())
-                .title(readModel.title())
-                .description(readModel.description())
-                .price(readModel.price())
-                .originalPrice(readModel.originalPrice())
-                .stock(readModel.stock())
-                .status(readModel.status())
-                .statusDesc(readModel.statusDesc())
-                .views(readModel.views())
-                .condition(readModel.condition())
-                .conditionDesc(readModel.conditionDesc())
-                .location(readModel.location())
-                .contactMethod(readModel.contactMethod())
-                .images(readModel.images())
-                .mainImageUrl(readModel.mainImageUrl())
-                .createTime(readModel.createTime())
-                .updateTime(readModel.updateTime())
-                .build();
-    }
-
-    /**
-     * 从 ReadModel + 关联数据富化装配 ProductVO（重写卖家信息与图片列表）。
-     */
-    public ProductVO toProductVO(ProductReadModel readModel,
-                                  Map<String, List<ProductQueryRepository.ProductImageInfo>> imagesByProduct,
-                                  Map<String, SellerReadModel> sellerMap) {
-        var seller = sellerMap.get(readModel.sellerId());
-        var username = seller != null
-                ? (seller.nickName() != null ? seller.nickName() : seller.username())
-                : readModel.username();
-        var userAvatar = seller != null ? seller.avatar() : readModel.userAvatar();
-
-        var images = imagesByProduct.getOrDefault(readModel.id(), List.of());
-        var imageUrls = images.stream()
+    private static void enrichImages(ProductVO.ProductVOBuilder builder, String productId,
+                                      Map<String, List<ProductQueryRepository.ProductImageInfo>> imagesByProduct) {
+        var images = imagesByProduct.getOrDefault(productId, List.of());
+        if (images.isEmpty()) return;
+        var urls = images.stream()
                 .map(ProductQueryRepository.ProductImageInfo::imageUrl)
                 .filter(Objects::nonNull)
                 .toList();
+        builder.images(urls);
         var mainImageUrl = images.stream()
                 .filter(ProductQueryRepository.ProductImageInfo::isMain)
                 .findFirst()
                 .map(ProductQueryRepository.ProductImageInfo::imageUrl)
-                .orElseGet(() -> imageUrls.isEmpty() ? "" : imageUrls.getFirst());
-
-        return ProductVO.builder()
-                .id(readModel.id())
-                .sellerId(readModel.sellerId())
-                .username(username)
-                .userAvatar(userAvatar)
-                .categoryId(readModel.categoryId())
-                .categoryName(readModel.categoryName())
-                .title(readModel.title())
-                .description(readModel.description())
-                .price(readModel.price())
-                .originalPrice(readModel.originalPrice())
-                .stock(readModel.stock())
-                .status(readModel.status())
-                .statusDesc(readModel.statusDesc())
-                .views(readModel.views())
-                .condition(readModel.condition())
-                .conditionDesc(readModel.conditionDesc())
-                .location(readModel.location())
-                .contactMethod(readModel.contactMethod())
-                .images(imageUrls)
-                .mainImageUrl(mainImageUrl)
-                .createTime(readModel.createTime())
-                .updateTime(readModel.updateTime())
-                .build();
+                .orElse(null);
+        builder.mainImageUrl(mainImageUrl != null ? mainImageUrl : urls.getFirst());
     }
 }
